--- a/Templates/obras.html
+++ b/Templates/obras.html
@@ -8,6 +8,17 @@
     <link rel="icon" href="../Image/Logo_ExploraTech/mars.png"> 
     <link rel="stylesheet" href="../styles/styles.css">
     <script defer="defer" src="../script/index.js"></script>
+    <style>
+        .obras_museu01 a {
+            text-decoration: none;
+            color: inherit;
+            display: block;
+        }
+        .obras_museu01 a:hover {
+            opacity: 0.8;
+            cursor: pointer;
+        }
+    </style>
 </head>
 
 <body class="body_obras">
@@ -42,38 +53,52 @@
         <section class="galeria">
 
             <div class="obras_museu01">
-                <img src="../Image/Obras/ObrasAgiota 01.gif" alt="" class="img_lucas">
-                <h3>Perseverance Rover</h3>
+                <a href="Views/ob_roverPerseverance.html">
+                    <img src="../Image/Obras/ObrasAgiota 01.gif" alt="Perseverance Rover" class="img_lucas">
+                    <h3>Perseverance Rover</h3>
+                </a>
             </div>
 
             <div class="obras_museu01">
-                <img src="../Image/Obras/ObrasAgiota 02.jpg" alt="" class="img_lucas">
-                <h3>Estação Espacial</h3>
+                <a href="Views/ob_estacaoEspacial.html">
+                    <img src="../Image/Obras/ObrasAgiota 02.jpg" alt="Estação Espacial" class="img_lucas">
+                    <h3>Estação Espacial</h3>
+                </a>
             </div>
 
             <div class="obras_museu01">
-                <img src="../Image/Obras/ObrasAgiota 04.png" alt="" class="img_lucas">
-                <h3>Carro Espacial</h3>
+                <a href="../Templates/obras-carro-espacial.html">
+                    <img src="../Image/Obras/ObrasAgiota 04.png" alt="Carro Espacial" class="img_lucas">
+                    <h3>Carro Espacial</h3>
+                </a>
             </div>
 
             <div class="obras_museu01">
-                <img src="../Image/Obras/ObrasAgiota 04.jpg" alt="" class="img_lucas">
-                <h3>Estação Espacial (Concept Art)</h3>
+                <a href="Views/ob_estacaoEspacial.html">
+                    <img src="../Image/Obras/ObrasAgiota 04.jpg" alt="Estação Espacial (Concept Art)" class="img_lucas">
+                    <h3>Estação Espacial (Concept Art)</h3>
+                </a>
             </div>
 
-            <div class="obras_museu01">
-                <img src="../Image/Obras/ObrasAgiota 06.jpg" alt="" class="img_lucas">
-                <h3>Carro Espacial (Segundo Modelo)</h3>
+            <div class="obras_museu02">
+                <a href="../Templates/obras-carro-espacial-modelo2.html">
+                    <img src="../Image/Obras/ObrasAgiota 06.jpg" alt="Carro Espacial (Segundo Modelo)" class="img_lucas">
+                    <h3>Carro Espacial (Segundo Modelo)</h3>
+                </a>
             </div>
 
-            <div class="obras_museu01">
-                <img src="../Image/Obras/ObrasAgiota 07.jpg" alt="" class="img_lucas">
-                <h3>Leonardo Aparecido (Engenheiro Aeroespacial)</h3>
+            <div class="obras_museu03">
+                <a href="../Templates/obras-leonardo.html">
+                    <img src="../Image/Obras/ObrasAgiota 07.jpg" alt="Leonardo Aparecido (Engenheiro Aeroespacial)" class="img_lucas">
+                    <h3>Leonardo Aparecido (Engenheiro Aeroespacial)</h3>
+                </a>
             </div>
 
-            <div class="obras_museu01">
-                <img src="../Image/Obras/ObrasAgiota 09.jpg" alt=""  class="img_lucas">
-                <h3>Jessica Watkins (Candidata a ir a Marte)</h3>
+            <div class="obras_museu04">
+                <a href="Views/ob_mariner4.html">
+                    <img src="../Image/Obras/mariner4.jpg" alt="Jessica Watkins (Candidata a ir a Marte)" class="img_lucas">
+                    <h3>Jessica Watkins (Candidata a ir a Marte)</h3>
+                </a>
             </div>
 
         </section>
