--- a/Templates/Views/ob_PerseveranceRover.html
+++ b/Templates/Views/ob_PerseveranceRover.html
@@ -38,23 +38,22 @@
     <section class="Sessao_Obra">
 
         <div class="imagem_obra">
-            <img src="../../Image/Obras/mariner4.jpg" alt="">
-            <p class="fonte_obras"><strong>🌍 Fonte: </strong>Cosmos Magazine</p>
+            <img src="../../Image/Obras/ObrasAgiota 06.jpg" alt="">
+            <p class="fonte_obras"><strong>🌍 Fonte: </strong>Leonardo.IA</p>
         </div>
 
         <div class="detalhes_obra">
-            <h1>Martiner 4</h1>
-            <h2>Primeira missão a Marte: O lugar especial da Mariner 4 na história</h2>
-            <p class="data_obra"><strong>14 de Julho de 1965</strong></p>
-            <p class="descricao_obra">A Mariner 4 fez sua aproximação mais próxima de Marte em 15 de julho de 1965, 
-                passando a cerca de 6.118 quilômetros da superfície do planeta. Durante esse encontro histórico, a 
-                sonda capturou 22 imagens, que revelaram um Marte muito diferente do que se imaginava na época. As fotografias 
-                mostraram um planeta coberto de crateras, semelhante à Lua, e sem sinais visíveis de água ou vida.</p>
-            <p class="descriptionEsquerda">A missão Mariner 4 não só foi um marco na exploração planetária como também 
-                estabeleceu as bases para todas as missões interplanetárias subsequentes da NASA. O sucesso da Mariner 4 
-                demonstrou a viabilidade de enviar sondas para outros planetas e ajudou a moldar as tecnologias utilizadas em 
-                futuras explorações espaciais56. A sonda continuou operando e enviando dados até dezembro de 1967, totalizando 
-                mais de três anos de comunicação após seu lançamento
+            <h1>Perseverance Rover: Explorando a História de Marte</h1>
+            <h2>Museu ExploraTech</h2>
+            <p class="data_obra"><strong>30 de julho de 2020 até hoje</strong></p>
+            <p class="descricao_obra">Em 2020, o rover Vanguard, criado pela NASA, pousou em Marte com uma missão
+                ambiciosa: encontrar sinais de vida antiga. Equipado com câmeras de alta resolução, um sistema de
+                perfuração e um pequeno helicóptero chamado Sojourner II, Vanguard começou a explorar a cratera Jezero,
+                uma área que os cientistas acreditavam ter sido um lago há bilhões de anos.</p>
+            <p class="descriptionEsquerda">Enquanto isso, o pequeno Sojourner II sobrevoava a área ao redor, ajudando a
+                mapear o terreno e evitando obstáculos. Esse par de exploradores robóticos continua enviando dados
+                valiosos para a Terra, aproximando a humanidade do sonho de entender se, em algum momento do passado
+                distante, Marte teve condições para abrigar vida.
             </p>
         </div>
     </section>
