--- a/Templates/Views/ob_estacaoEspacial.html
+++ b/Templates/Views/ob_estacaoEspacial.html
@@ -20,10 +20,10 @@
             <input class="mobile-menu-checkbox" type="checkbox" id="mobile-menu-checkbox" />
             <label class="mobile-menu-icon" for="mobile-menu-checkbox"><span class="hamburger-icon"></span></label>
             <ul class="navigation-menu">
-                <li><a href="../../index.html" title="Home">HOME</a></li> <!-- Ajustado para caminho relativo -->
-                <li><a href="../Templates/sobre.html" title="Sobre">SOBRE</a></li> <!-- Ajustado para caminho relativo -->
-                <li><a href="../Templates/obras.html" title="Artigos">OBRAS</a></li> <!-- Ajustado para caminho relativo -->
-                <li><a href="../Templates/faq.html" title="Contato">CONTATO</a></li> <!-- Ajustado para caminho relativo -->
+                <li><a href="../../index.html" title="Home">HOME</a></li>
+                <li><a href="../sobre.html" title="Sobre">SOBRE</a></li>
+                <li><a href="../obras.html" title="Artigos">OBRAS</a></li>
+                <li><a href="../faq.html" title="Contato">CONTATO</a></li>
             </ul>   
         </div>
 
@@ -38,16 +38,23 @@
     <section class="Sessao_Obra">
         
         <div class="imagem_obra">
-            <img src="../../Image/Obras/ObrasAgiota%2004.jpg" alt="Imagem do Perseverance Rover em Marte"> <!-- Ajuste no caminho da imagem -->
+            <img src="../../Image/Obras/Gateway.png" alt="Imagem do Perseverance Rover em Marte">
             <p class="fonte_obras"><strong>🌍 Fonte: </strong>Leonardo.I.A</p>
         </div>
         
         <div class="detalhes_obra">
-            <h1>Estação Espacial em Marte</h1>
-            <h2>Museu ExploraTech e Casa Kennedy</h2>
-            <p class="data_obra"><strong>De 11 de Junho a 29 de Agosto de 2024</strong></p>
-            <p class="descricao_obra">Uma estação espacial em Marte seria uma estrutura modular e autossustentável, protegida contra radiação e temperaturas extremas...</p>
-            <!-- Continue com o restante do conteúdo -->
+            <h1>Estação Espacial Gateway</h1>
+            <h2>Museu ExploraTech</h2>
+            <p class="data_obra"><strong>De 2017 até os dias atuais</strong></p>
+            <p class="descricao_obra">Atualmente, não existe uma estação espacial específica para a ida a Marte. 
+                No entanto, a NASA está desenvolvendo planos que envolvem o uso de uma futura estação espacial chamada Gateway, 
+                que irá orbitar a Lua. Essa estação servirá como um ponto de apoio para missões lunares e, potencialmente, para missões a 
+                Marte. </p>
+            <p class="descriptionEsquerda">O desenvolvimento da Gateway é parte de um programa mais amplo da NASA, 
+                conhecido como "Moon to Mars", que visa usar a experiência adquirida na Lua para preparar missões 
+                ao planeta vermelho.
+            </p>
+
         </div>
     </section>
 
