--- a/Templates/Views/ob_helicopteroingenuity.html
+++ b/Templates/Views/ob_helicopteroingenuity.html
@@ -23,9 +23,9 @@
             <label class="mobile-menu-icon" for="mobile-menu-checkbox"><span class="hamburger-icon"></span></label>
             <ul class="navigation-menu">
                 <li><a href="../../index.html" title="Home">HOME</a></li>
-                <li><a href="../Templates/sobre.html" title="Sobre">SOBRE</a></li>
-                <li><a href="../Templates/obras.html" title="Artigos">OBRAS</a></li>
-                <li><a href="../Templates/faq.html" title="Contato">CONTATO</a></li>
+                <li><a href="../sobre.html" title="Sobre">SOBRE</a></li>
+                <li><a href="../obras.html" title="Artigos">OBRAS</a></li>
+                <li><a href="../faq.html" title="Contato">CONTATO</a></li>
             </ul>   
         </div>
 
@@ -44,14 +44,19 @@
         </div>
         
         <div class="detalhes_obra">
-            <h1>Perseverance Rover: Explorando a História de Marte</h1>
-            <h2>Museu ExploraTech e Casa Kennedy</h2>
-            <p class="data_obra"><strong>De 11 de Junho a 29 de Agosto de 2024</strong></p>
-            <p class="descricao_obra">O Perseverance Rover é um veículo robótico da NASA enviado a Marte como parte da missão Mars 2020. Ele pousou no planeta vermelho em 18 de fevereiro de 2021, com o objetivo de buscar sinais de vida microbiana passada, estudar a geologia e o clima do planeta, e coletar amostras do solo e rochas para futuras missões que as trarão de volta à Terra. Equipado com instrumentos avançados, o Perseverance conta com câmeras de alta resolução, 
-                um braço robótico para análise de rochas e uma série de sensores.</p>
-            <p class="descriptionEsquerda">Entre seus equipamentos de destaque estão o SHERLOC, 
-                que procura sinais de compostos orgânicos, e o SuperCam, que usa lasers para estudar a composição química das rochas. Ele também trouxe consigo um pequeno helicóptero chamado Ingenuity, que fez o primeiro voo motorizado em outro planeta, explorando Marte de cima. O Perseverance continua a explorar a Cratera Jezero, uma área que acredita-se ter abrigado um antigo lago, tornando-a um local 
-                promissor para encontrar sinais de vida passada.</p>
+            <h1>Helicóptero Ingenuity</h1>
+            <h2>Museu ExploraTech</h2>
+            <p class="data_obra"><strong>30 de julho de 2020 até 2023</strong></p>
+            <p class="descricao_obra">O Ingenuity é um mini helicóptero desenvolvido pela NASA,
+                 que fez história ao realizar voos em Marte. Lançado em 2020 junto com o rover Perseverance, 
+                 o Ingenuity tinha como principal objetivo demonstrar a viabilidade do voo motorizado em uma 
+                 atmosfera tão rarefeita quanto a de Marte.</p>
+            <p class="descriptionEsquerda">O Ingenuity foi projetado inicialmente para realizar cinco voos curtos em um mês, 
+                mas superou as expectativas ao completar 72 voos ao longo de três anos. O primeiro voo ocorreu em 19 de abril 
+                de 2021, quando o helicóptero subiu a uma altura de cerca de três metros e permaneceu no ar por 39 segundos. 
+                Esse feito foi comparado a fazer um helicóptero convencional voar a uma altitude de 30.000 metros na Terra, 
+                dada a baixa densidade da atmosfera marciana.
+            </p>
         </div>
     </section>
 
