--- a/Templates/Views/ob_MarsPath.html
+++ b/Templates/Views/ob_MarsPath.html
@@ -38,23 +38,22 @@
     <section class="Sessao_Obra">
 
         <div class="imagem_obra">
-            <img src="../../Image/Obras/mariner4.jpg" alt="">
-            <p class="fonte_obras"><strong>🌍 Fonte: </strong>Cosmos Magazine</p>
+            <img src="../../Image/Obras/MarsPath.jpg" alt="">
+            <p class="fonte_obras"><strong>🌍 Fonte: </strong>Leonardo.IA</p>
         </div>
 
         <div class="detalhes_obra">
-            <h1>Martiner 4</h1>
-            <h2>Primeira missão a Marte: O lugar especial da Mariner 4 na história</h2>
-            <p class="data_obra"><strong>14 de Julho de 1965</strong></p>
-            <p class="descricao_obra">A Mariner 4 fez sua aproximação mais próxima de Marte em 15 de julho de 1965, 
-                passando a cerca de 6.118 quilômetros da superfície do planeta. Durante esse encontro histórico, a 
-                sonda capturou 22 imagens, que revelaram um Marte muito diferente do que se imaginava na época. As fotografias 
-                mostraram um planeta coberto de crateras, semelhante à Lua, e sem sinais visíveis de água ou vida.</p>
-            <p class="descriptionEsquerda">A missão Mariner 4 não só foi um marco na exploração planetária como também 
-                estabeleceu as bases para todas as missões interplanetárias subsequentes da NASA. O sucesso da Mariner 4 
-                demonstrou a viabilidade de enviar sondas para outros planetas e ajudou a moldar as tecnologias utilizadas em 
-                futuras explorações espaciais56. A sonda continuou operando e enviando dados até dezembro de 1967, totalizando 
-                mais de três anos de comunicação após seu lançamento
+            <h1>Sojourner</h1>
+            <h2>Museu ExploraTech</h2>
+            <p class="data_obra"><strong>4 de dezembro de 1996</strong></p>
+            <p class="descricao_obra">O Mars Pathfinder foi uma missão da NASA que marcou um importante avanço na exploração
+                 de Marte, sendo lançada em 4 de dezembro de 1996 e aterrissando no planeta vermelho em 4 de julho de 1997. 
+                 Esta missão foi pioneira por ser a primeira a utilizar um rover, chamado Sojourner, para explorar a superfície 
+                 marciana.</p>
+            <p class="descriptionEsquerda">A missão Mars Pathfinder foi considerada um grande sucesso, não apenas por suas 
+                descobertas científicas, mas também por ter estabelecido as bases para futuras missões a Marte. As tecnologias 
+                desenvolvidas durante o Pathfinder influenciaram diretamente as missões subsequentes, como os rovers Spirit e 
+                Opportunity, que foram lançados em 2004.
             </p>
         </div>
     </section>
