--- a/Templates/Views/ob_oqEstacao.html
+++ b/Templates/Views/ob_oqEstacao.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ExploraTech | Lunar</title>
-    <link rel="icon" href="../../Image/Logo_ExploraTech/mars.png">
-    <link rel="stylesheet" href="../../styles/styles.css">
-    <script defer="defer" src="../../script/index.js"></script>
+    <title>ExploraTech | Estação Espacial</title>
+    <link rel="icon" href="../../Image/Logo_ExploraTech/mars.png"> 
+    <link rel="stylesheet" href="../../styles/styles.css"> <!-- Ajustado para caminho relativo -->
+    <script defer="defer" src="../../script/index.js"></script> <!-- Ajustado para caminho relativo -->
 </head>
 
-
 <body>
-
+   
     <header class="site-header">
-        <div class="header-content">
-            <a href="../../index.html" class="site-logo">
-                <img src="../../Image/Logo_ExploraTech/LogoExploraTech01.png" title="Loop Nerd"></a>
+        <div class="header-content"> 
+            <a href="../../index.html" class="site-logo"> <!-- Ajustado para caminho relativo -->
+                <img src="../../Image/Logo_ExploraTech/LogoExploraTech01.png" title="">
+            </a> 
             <input class="mobile-menu-checkbox" type="checkbox" id="mobile-menu-checkbox" />
             <label class="mobile-menu-icon" for="mobile-menu-checkbox"><span class="hamburger-icon"></span></label>
             <ul class="navigation-menu">
@@ -24,7 +24,7 @@
                 <li><a href="../sobre.html" title="Sobre">SOBRE</a></li>
                 <li><a href="../obras.html" title="Artigos">OBRAS</a></li>
                 <li><a href="../faq.html" title="Contato">CONTATO</a></li>
-            </ul>
+            </ul>   
         </div>
 
         <label class="modo_escuro">
@@ -36,33 +36,31 @@
     </header>
 
     <section class="Sessao_Obra">
-
+        
         <div class="imagem_obra">
-            <img src="../../Image/Obras/mariner4.jpg" alt="">
-            <p class="fonte_obras"><strong>🌍 Fonte: </strong>Cosmos Magazine</p>
+            <img src="../../Image/Obras/ObrasAgiota 04.jpg" alt="Imagem do Perseverance Rover em Marte">
+            <p class="fonte_obras"><strong>🌍 Fonte: </strong>Leonardo.I.A</p>
         </div>
-
+        
         <div class="detalhes_obra">
-            <h1>Martiner 4</h1>
-            <h2>Primeira missão a Marte: O lugar especial da Mariner 4 na história</h2>
-            <p class="data_obra"><strong>14 de Julho de 1965</strong></p>
-            <p class="descricao_obra">A Mariner 4 fez sua aproximação mais próxima de Marte em 15 de julho de 1965, 
-                passando a cerca de 6.118 quilômetros da superfície do planeta. Durante esse encontro histórico, a 
-                sonda capturou 22 imagens, que revelaram um Marte muito diferente do que se imaginava na época. As fotografias 
-                mostraram um planeta coberto de crateras, semelhante à Lua, e sem sinais visíveis de água ou vida.</p>
-            <p class="descriptionEsquerda">A missão Mariner 4 não só foi um marco na exploração planetária como também 
-                estabeleceu as bases para todas as missões interplanetárias subsequentes da NASA. O sucesso da Mariner 4 
-                demonstrou a viabilidade de enviar sondas para outros planetas e ajudou a moldar as tecnologias utilizadas em 
-                futuras explorações espaciais56. A sonda continuou operando e enviando dados até dezembro de 1967, totalizando 
-                mais de três anos de comunicação após seu lançamento
+            <h1>O que é uma Estação Espacial</h1>
+            <h2>Museu ExploraTech</h2>
+            <p class="data_obra"><strong>Tempos atuais</strong></p>
+            <p class="descricao_obra">Uma estação espacial é uma estrutura artificial projetada para permitir a permanência 
+                humana no espaço por períodos prolongados. Diferente de naves espaciais, as estações não possuem sistemas 
+                próprios de propulsão ou aterragem e são utilizadas principalmente como laboratórios de pesquisa e plataformas 
+                para experimentos científicos. </p>
+            <p class="descriptionEsquerda">As estações espaciais desempenham um papel crucial na exploração espacial, permitindo:
+                <br />Pesquisa Científica: Realização de experimentos que não podem ser feitos na Terra devido à gravidade ou condições ambientais.
+                <br />Preparação para Explorações Futuras: Servem como base para missões mais longas a outros corpos celestes, como a Lua e Marte.
             </p>
+
         </div>
     </section>
 
     <!-- Footer aqui -->
-
     <footer class="footer">
-        <p>© 2024 ExploraTech | Museu para todos os publicos.</p>
+        <p>© 2024 ExploraTech | Museu para todos os públicos.</p>
         <div class="footer-content">
             <div class="social-links">
                 <a href="https://x.com/?lang=pt-br" aria-label="">
@@ -75,8 +73,8 @@
                     <img src="../../Image/Icones/FaceBlack.png" alt="Facebook">
                 </a>
             </div>
+        </div>
     </footer>
 
 </body>
-
 </html>
