--- a/Templates/Views/ob_sandra.html
+++ b/Templates/Views/ob_sandra.html
@@ -4,27 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ExploraTech | Lunar</title>
-    <link rel="icon" href="../../Image/Logo_ExploraTech/mars.png">
-    <link rel="stylesheet" href="../../styles/styles.css">
-    <script defer="defer" src="../../script/index.js"></script>
+    <title>ExploraTech | Estação Espacial</title>
+    <link rel="icon" href="../../Image/Logo_ExploraTech/mars.png"> 
+    <link rel="stylesheet" href="../../styles/styles.css"> <!-- Ajustado para caminho relativo -->
+    <script defer="defer" src="../../script/index.js"></script> <!-- Ajustado para caminho relativo -->
 </head>
 
-
 <body>
-
+   
     <header class="site-header">
-        <div class="header-content">
-            <a href="../../index.html" class="site-logo">
-                <img src="../../Image/Logo_ExploraTech/LogoExploraTech01.png" title="Loop Nerd"></a>
+        <div class="header-content"> 
+            <a href="../../index.html" class="site-logo"> <!-- Ajustado para caminho relativo -->
+                <img src="../../Image/Logo_ExploraTech/LogoExploraTech01.png" title="">
+            </a> 
             <input class="mobile-menu-checkbox" type="checkbox" id="mobile-menu-checkbox" />
             <label class="mobile-menu-icon" for="mobile-menu-checkbox"><span class="hamburger-icon"></span></label>
             <ul class="navigation-menu">
                 <li><a href="../../index.html" title="Home">HOME</a></li>
-                <li><a href="../Templates/sobre.html" title="Sobre">SOBRE</a></li>
-                <li><a href="../Templates/obras.html" title="Artigos">OBRAS</a></li>
-                <li><a href="../Templates/faq.html" title="Contato">CONTATO</a></li>
-            </ul>
+                <li><a href="../sobre.html" title="Sobre">SOBRE</a></li>
+                <li><a href="../obras.html" title="Artigos">OBRAS</a></li>
+                <li><a href="../faq.html" title="Contato">CONTATO</a></li>
+            </ul>   
         </div>
 
         <label class="modo_escuro">
@@ -36,32 +36,31 @@
     </header>
 
     <section class="Sessao_Obra">
-
+        
         <div class="imagem_obra">
-            <img src="../../Image/Obras/ObrasAgiota 06.jpg" alt="">
-            <p class="fonte_obras"><strong>🌍 Fonte: </strong>Leonardo.IA</p>
+            <img src="../../Image/Obras/primeiracandidata.jpg" alt="Imagem do Perseverance Rover em Marte">
+            <p class="fonte_obras"><strong>🌍 Fonte: </strong>Leonardo.I.A</p>
         </div>
-
+        
         <div class="detalhes_obra">
-            <h1>Rover Vanguard</h1>
-            <h2>Museu ExploraTech e Casa Kennedy</h2>
-            <p class="data_obra"><strong>De 11 de Junho a 29 de Agosto de 2024</strong></p>
-            <p class="descricao_obra">Em 2021, o rover Vanguard, criado pela NASA, pousou em Marte com uma missão
-                ambiciosa: encontrar sinais de vida antiga. Equipado com câmeras de alta resolução, um sistema de
-                perfuração e um pequeno helicóptero chamado Sojourner II, Vanguard começou a explorar a cratera Jezero,
-                uma área que os cientistas acreditavam ter sido um lago há bilhões de anos.</p>
-            <p class="descriptionEsquerda">Enquanto isso, o pequeno Sojourner II sobrevoava a área ao redor, ajudando a
-                mapear o terreno e evitando obstáculos. Esse par de exploradores robóticos continua enviando dados
-                valiosos para a Terra, aproximando a humanidade do sonho de entender se, em algum momento do passado
-                distante, Marte teve condições para abrigar vida.
+            <h1>Candidata brasileira para explorar Marte</h1>
+            <h2>Museu ExploraTech</h2>
+            <p class="data_obra"><strong>Tempos atuais</strong></p>
+            <p class="descricao_obra">Atualmente, não há uma candidata específica confirmada para ser a primeira pessoa a ir 
+                a Marte, mas várias iniciativas e programas estão em andamento que visam enviar humanos ao planeta vermelho nas 
+                próximas décadas.
+                </p>
+            <p class="descriptionEsquerda">A NASA planeja enviar astronautas a Marte na década de 2030, com o objetivo de 
+                realizar um pouso humano até 2040. Os detalhes sobre os astronautas específicos que participarão dessa missão 
+                ainda não foram divulgados.
             </p>
+
         </div>
     </section>
 
     <!-- Footer aqui -->
-
     <footer class="footer">
-        <p>© 2024 ExploraTech | Museu para todos os publicos.</p>
+        <p>© 2024 ExploraTech | Museu para todos os públicos.</p>
         <div class="footer-content">
             <div class="social-links">
                 <a href="https://x.com/?lang=pt-br" aria-label="">
@@ -74,8 +73,8 @@
                     <img src="../../Image/Icones/FaceBlack.png" alt="Facebook">
                 </a>
             </div>
+        </div>
     </footer>
 
 </body>
-
 </html>
