--- a/Templates/obras.html
+++ b/Templates/obras.html
@@ -25,7 +25,7 @@
 
     <header class="site-header">
         <div class="header-content"> 
-            <a href="/index.html" class="site-logo">
+            <a href="../index.html" class="site-logo">
                 <img src="../Image/Logo_ExploraTech/LogoExploraTech01.png" title="Loop Nerd">
             </a> 
             <input class="mobile-menu-checkbox" type="checkbox" id="mobile-menu-checkbox" />
@@ -53,51 +53,51 @@
         <section class="galeria">
 
             <div class="obras_museu01">
-                <a href="Views/ob_roverPerseverance.html">
+                <a href="Views/ob_helicopteroingenuity.html">
                     <img src="../Image/Obras/ObrasAgiota 01.gif" alt="Perseverance Rover" class="img_lucas">
-                    <h3>Perseverance Rover</h3>
+                    <h3>Helicóptero Ingenuity</h3>
                 </a>
             </div>
 
             <div class="obras_museu01">
                 <a href="Views/ob_estacaoEspacial.html">
                     <img src="../Image/Obras/ObrasAgiota 02.jpg" alt="Estação Espacial" class="img_lucas">
-                    <h3>Estação Espacial</h3>
+                    <h3>Estação Espacial Gateway</h3>
                 </a>
             </div>
 
             <div class="obras_museu01">
-                <a href="../Templates/obras-carro-espacial.html">
+                <a href="Views/ob_PerseveranceRover.html">
                     <img src="../Image/Obras/ObrasAgiota 04.png" alt="Carro Espacial" class="img_lucas">
-                    <h3>Carro Espacial</h3>
+                    <h3>Perseverance Rover</h3>
                 </a>
             </div>
 
             <div class="obras_museu01">
-                <a href="Views/ob_estacaoEspacial.html">
+                <a href="Views/ob_oqEstacao.html">
                     <img src="../Image/Obras/ObrasAgiota 04.jpg" alt="Estação Espacial (Concept Art)" class="img_lucas">
-                    <h3>Estação Espacial (Concept Art)</h3>
+                    <h3>O que é uma Estação Espacial</h3>
                 </a>
             </div>
 
-            <div class="obras_museu02">
-                <a href="../Templates/obras-carro-espacial-modelo2.html">
-                    <img src="../Image/Obras/ObrasAgiota 06.jpg" alt="Carro Espacial (Segundo Modelo)" class="img_lucas">
-                    <h3>Carro Espacial (Segundo Modelo)</h3>
+            <div class="obras_museu01">
+                <a href="Views/ob_MarsPath.html">
+                    <img src="../Image/Obras/MarsPath.jpg" alt="Carro Espacial (Segundo Modelo)" class="img_lucas">
+                    <h3>Sojourner</h3>
                 </a>
             </div>
 
-            <div class="obras_museu03">
-                <a href="../Templates/obras-leonardo.html">
-                    <img src="../Image/Obras/ObrasAgiota 07.jpg" alt="Leonardo Aparecido (Engenheiro Aeroespacial)" class="img_lucas">
-                    <h3>Leonardo Aparecido (Engenheiro Aeroespacial)</h3>
+            <div class="obras_museu01">
+                <a href="Views/ob_sandra.html">
+                    <img src="../Image/Obras/primeiracandidata.jpg" alt="Leonardo Aparecido (Engenheiro Aeroespacial)" class="img_lucas">
+                    <h3>Missão populada para Marte</h3>
                 </a>
             </div>
 
-            <div class="obras_museu04">
+            <div class="obras_museu01">
                 <a href="Views/ob_mariner4.html">
                     <img src="../Image/Obras/mariner4.jpg" alt="Jessica Watkins (Candidata a ir a Marte)" class="img_lucas">
-                    <h3>Jessica Watkins (Candidata a ir a Marte)</h3>
+                    <h3>Mariner 4</h3>
                 </a>
             </div>
 
